# open-cv-filters

./: CMakeLists.txt  README.md  blur.py  filter.cpp  filter.h  image_view.cpp  image_view.py  new_video_view.py  test_opencv.cpp  timeBlur.cpp  vidDisplay.cpp  video_view.py
c++_version/: image_view.cpp
python_version/: filters.py  image_view.py  video_view.py
